Home/list mobile styling and a jsx truncation fix.

--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -15,7 +15,7 @@
 
 .home--search-bar {
   width: 50%;
-  height: 50px;
+  min-height: 50px;
   border: none;
   background-color: rgb(197, 193, 193);
   border-radius: 15px;
@@ -125,6 +125,14 @@ input {
 }
 
 @media screen and (max-width: 900px) {
+  .home h1 {
+    font-size: 3rem;
+  }
+
+  .home--search-bar {
+    min-height: 40px;
+  }
+
   .search-bar-results {
     font-size: 1.2rem;
   }
@@ -163,6 +171,10 @@ input {
   footer {
     font-size: 0.8rem;
   }
+
+  .home--search-bar {
+    font-size: 1.3rem;
+  }
 }
 
 @media screen and (max-width: 300px) {
@@ -171,6 +183,6 @@ input {
   }
 
   .home--search-bar {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
   }
 }
