--- a/src/Styles/list.css
+++ b/src/Styles/list.css
@@ -263,5 +263,16 @@ button.reset-button:hover {
   .filter-buttons {
     right: 10px;
   }
+
+  .list h1 {
+    font-size: 3rem;
+  }
 }
+
+@media screen and (max-width: 300px) {
+  div.filter-drop-down {
+    width: 280px;
+  }
+}
+
 /**Media Queries End**/
